--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   firebase_auth:
+  cloud_firestore: ^0.8.2+3
+  flutter_rating: ^0.0.2
 
 dev_dependencies:
   flutter_test:
