--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  firebase_auth:
+
+  firebase_auth: ^0.6.6
   cloud_firestore: ^0.8.2+3
   flutter_rating: ^0.0.2
 
