--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
-  firebase_auth: ^0.6.6
   cloud_firestore: ^0.8.2+3
   flutter_rating: ^0.0.2
+  location: ^1.4.1
+  firebase_core: ^0.2.5+1
+  firebase_database: ^1.0.5
+  firebase_auth: ^0.6.6
+  google_sign_in: ^3.2.4
 
 dev_dependencies:
   flutter_test:
@@ -41,8 +44,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+   - images/locked.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
