installed AppAvailability plugin to check if particular app is installed, and if so, launch that app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   firebase_database: ^1.0.5
   firebase_auth: ^0.6.6
   google_sign_in: ^3.2.4
+  flutter_appavailability:
 
 dev_dependencies:
   flutter_test:
