--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,5 +60,6 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    compile 'com.firebase:geofire-android:2.3.1'
 }
 apply plugin: 'com.google.gms.google-services'
