--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   google_sign_in: ^3.2.4
   shared_preferences: ^0.4.3
   flutter_geofire: ^0.0.4
+  latlong: ^0.6.1
 
 
 dev_dependencies:
