--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - images/locked.png
+   - images/notfound.png
+   - images/distance.png
+   - images/whatsapp.png
+   - images/facebook.png
+   - images/waze.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
