--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ android/app/google-services.json
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 lib/common/keys.dart
+android/key.properties
