--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,7 +39,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "biz.eastservices.suara"
+        applicationId "com.labuanservices.suara"
         minSdkVersion 21
         targetSdkVersion 28
         multiDexEnabled true
@@ -59,6 +59,12 @@ android {
 
     buildTypes {
         release {
+            
+
+            minifyEnabled false
+            useProguard true
+
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
         }
     }
