--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="biz.eastservices.suara">
+    package="com.labuanservices.suara">
 
     <!-- The INTERNET permission is required for development. Specifically,
          flutter needs it to communicate with the running application
